--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,11 @@ footer {
     border-top: 1px solid #ddd;
 }
 
+nav {
+    padding: 20px;
+    border-bottom: 1px solid #ddd;
+}
+
 a, a:hover, a:focus, a:visited {
     color: #343c82;
 }
